# ureply-auto-take-attendance

./: .gitignore  README.md  discord bot.cmd  discord bot.py  initialize info.cmd  initialize info.py  initialize info.spec  publish ureply answers.cmd  publish ureply answers.py  publish ureply answers.spec  py2exe.cmd  pyproject.toml  requirements.txt  ureply auto take attendance.cmd  ureply auto take attendance.py  ureply auto take attendance.spec  ureply auto take attendence.cmd  ureply auto take attendence.py
info/: credential_template.json  info_template.json  ureply.json
